@@ -1,8 +1,6 @@
 // SPDX-License-Identifier: GPL-3.0-or-later
-
 #ifndef TOOLS_INSPECTOR_H
 #define TOOLS_INSPECTOR_H
-
 #include "libclient/tools/tool.h"
 
 namespace tools {
@@ -16,16 +14,22 @@ class Inspector final : public Tool {
 public:
 	Inspector(ToolController &owner);
 
-	void begin(const canvas::Point& point, bool right, float zoom) override;
-	void motion(const canvas::Point& point, bool constrain, bool center) override;
+	void begin(const canvas::Point &point, bool right, float zoom) override;
+
+	void
+	motion(const canvas::Point &point, bool constrain, bool center) override;
+
 	void end() override;
+
 	void cancelMultipart() override;
 
+	void setShowTiles(bool showTiles) { m_showTiles = showTiles; }
+
 private:
-	bool m_inspecting;
+	bool m_inspecting = false;
+	bool m_showTiles = false;
 };
 
 }
 
 #endif
-
